--- a/404.html
+++ b/404.html
@@ -19,15 +19,15 @@
         <meta property="og:title" content="404 Page not found - Lucas Azambuja" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Website Description"/>
-<meta property="og:url" content="https://lucasazambuja.dev/404.html"/>
+<meta property="og:url" content="https://lucas-azambuja.github.io/404.html"/>
 <meta property="og:site_name" content="Lucas Azambuja"/>
 
 
 
 
-<meta property="og:image" content="https://lucasazambuja.dev/home/profile.png"/>
+<meta property="og:image" content="https://lucas-azambuja.github.io/home/profile.png"/>
 
-<meta property="og:image" content="https://lucasazambuja.dev/home/profile2.jpg"/>
+<meta property="og:image" content="https://lucas-azambuja.github.io/home/profile2.jpg"/>
 
 
 
@@ -117,7 +117,7 @@
         
 
 
-<script src="https://lucasazambuja.dev/js/bundle.f1741e9868b2f697e71cf8fccfcc12166540999b3d36f8fb9edd0882ba425d55.js" integrity="sha256-8XQemGiy9pfnHPj8z8wSFmVAmZs9Nvj7nt0IgrpCXVU="></script>
+<script src="https://lucas-azambuja.github.io/js/bundle.f1741e9868b2f697e71cf8fccfcc12166540999b3d36f8fb9edd0882ba425d55.js" integrity="sha256-8XQemGiy9pfnHPj8z8wSFmVAmZs9Nvj7nt0IgrpCXVU="></script>
 
 
 
